Fixed overflow issue. Added fixed footer which hides when scroll to bottom.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -15,11 +15,23 @@
     outline: none;
 }
 
+body
+{
+    overflow-y: hidden;
+}
+
+#app
+{
+    height: 100vh;
+    width: 100%;
+}
+
 #layout-table
 {
-    width: 100vw;
-    height: 100vh;
-    max-height: 100vh;
+    position: absolute;
+    height: 100%;
+    max-height: 100%;
+    width: 100%;
     border-spacing: 0;
 }
 
@@ -39,6 +51,17 @@ hr
     height: 1px;
     border: 0;
     border-top: 1px solid #dadada;
+}
+
+a
+{
+    color: black;
+    text-decoration: none;
+}
+a:active
+{
+    color: #eaeaea;
+    transition: color 0.2s linear;
 }
 
 /* CLASSES */
@@ -152,14 +175,25 @@ hr
 {
     float: right;
 }
+.float-left
+{
+    float: left;
+}
 
 .footer
 {
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    margin: 0 auto;
     right: 0;
-    padding: 0 3% 3% 3%;
+    width: 100vw;
+    height: 3vh;
+    background-color: white;
+    border-top: 1px solid #eaeaea;
+    box-shadow: 0 0 10px 2px #e3f7bb;
+}
+.footer a
+{
+    margin: 0 1% 0 1%;
 }
 
 .align-left
@@ -183,6 +217,7 @@ hr
     background-color: #fbfbfb;
     margin: 0 auto;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #social-media-container
@@ -220,7 +255,11 @@ hr
 /* END OF MAIN STRUCTURE */
 
 /* ARCHIVE */
-#archive,
+#archive
+{
+    height: 80%;
+}
+
 #archive > div,
 #commentInput,
 #commentsBox .button
@@ -263,12 +302,6 @@ hr
     width: 100%;
     padding: 15px;
     font-size: 18px;
-}
-
-#archive a
-{
-    color: black;
-    text-decoration: none;
 }
 
 #archive h4,
@@ -448,14 +481,6 @@ hr
     padding: 1%;
 }
 
-#branding-section
-{
-    height: 20%;
-    background: url('http://placehold.it/480x210');
-    background-size: cover;
-    background-position: center;
-}
-
 #postOptionsApp div > *
 {
     margin-bottom: 3%;
@@ -523,6 +548,7 @@ hr
     border: 1px solid #eaeaea;
     border-radius: 10px;
 }
+
 /* CLASSES */
 .tag
 {
@@ -699,12 +725,6 @@ hr
 #mobPostList li:hover
 {
     background-color: #e3f7bb;
-}
-#mobPostList a
-{
-    font-size: 36px;
-    color: black;
-    text-decoration: none;
 }
 
 /*#mobCommentsBox
